# not-another-js-runtime

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
docs/updates/: 2025-10-22_initial_runtime_setup.md
runtime-core/: Cargo.toml
runtime-core/src/: bootstrap.js  lib.rs  ops_fs.rs  ts_loader.rs
runtime-core/tests/: runtime.rs
src/: main.rs
