[package]
name = "runtime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
deno_ast = { version = "0.44.0", default-features = false, features = ["transpiling"] }
deno_core = "0.338.0"
deno_error = "0.5.6"
reqwest = "0.12"
tokio = { version = "1.43", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

# Explicitly pin serde to a version known to work with older swc_* crates
serde = { version = "=1.0.217", features = ["derive"] }
serde_derive = "=1.0.217"

# Explicitly pin deno_media_type to use with older crates
deno_media_type = "=0.2.5"

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
tempfile = "2"
